--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +40,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^19.0.3"
-  }
+    "@types/react-dom": "^19.0.3",
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://shevchenkoviktoria.github.io/egg-boiler"
 }
