--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build docs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -40,8 +37,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^19.0.3",
-    "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://shevchenkoviktoria.github.io/egg-boiler"
+    "@types/react-dom": "^19.0.3"
+  }
 }
