--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "egg-boiler",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yourusername.github.io/egg-boiler",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -16,7 +17,9 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^19.0.3"
+    "@types/react-dom": "^19.0.3",
+    "gh-pages": "^6.3.0"
   }
 }
